# grafika

./: .gitignore  CMakeLists.txt  README.md  example.txt  main  main.cpp
common/: CMakeLists.txt  color.cpp  curve.cpp  font.cpp  framebuffer.cpp  line.cpp  polygon.cpp
grafika1/: CMakeLists.txt  coba.cpp
grafika1/lib/: bitmap.h~  framebuffer.h  framebuffer.h~
grafika2/: CMakeLists.txt  coba.cpp  e  grafika2.cpp  grafika2.cpp~  luqman.cpp  main.cpp  makefile
grafika2/lib/: bitmap.h  framebuffer.h  point.h
grafika3/: CMakeLists.txt  e  main  main.cpp  main.cpp~
grafika3/lib/: point.h  point.h~  polygon.h  polygon.h~
grafika4/: CMakeLists.txt  driver.cpp  e  main  main.cpp  main.cpp~  makefile  pesawat.cpp
grafika4/lib/: color.h  framebuffer.h  object.h  point.h  point.h~  polygon.h
grafika4/objects/: baling.h  belakang.h  boom.h  jendela.h  orang.h  parachute.h  peluru.h  pesawat.h  roda.h  sijagur.h  (+1 more)
grafika5/: .gitignore  .goutputstream-PULBDY  CMakeLists.txt  dr  driver.cpp  e  example.txt~  main  main.cpp  main.cpp~
grafika6/: .gitignore  CMakeLists.txt  driver.cpp  main.cpp  makefile
grafika7/: .gitignore  CMakeLists.txt  a.out  driver  driver.cpp  main.cpp  makefile
grafika8/: CMakeLists.txt  a.out  driver.cpp  font.cpp  main.cpp
include/: color.h  conio2.h  convex_hull.h  curve.h  font.h  frame.h  framebuffer.h  geo.h  line.h  point.h  polygon.h  shape.h  vector.h
lib/: color.h  convex_hull.h  curve.h  font.h  frame.h  framebuffer.h  jajal.cpp  line.h  point.h  point.h~  polygon.h  polygon.h~  polygon_research.cpp  shape.h  vector.h
(+90 files in other folders)
